ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/Accessors/parserAccessors10/input.ts.stderr
error: `public` modifier cannot be used here.
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Accessors/parserAccessors10/input.ts:3:3
  |
3 |   public get foo() { }
  |   ^^^^^^

